--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="share_my_location">Share My Location</string>
+    <string name="title_activity_share_my_location">ShareMyLocation</string>
+    <string name="title_activity_emergency">Emergency</string>
+    <string name="title_activity_settings">Settings</string>
 
 </resources>
