--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_share_my_location">ShareMyLocation</string>
     <string name="title_activity_emergency">Emergency</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_get_contacts">GetContacts</string>
 
 </resources>
