--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_get_contacts">Get Contacts</string>
     <string name="dialog_prompt">Select message</string>
+    <string name="edit_emergency_contacts">Edit emergency contacts</string>
     
     <string-array name="emergency_dialogs">
         <item>Help. I am in trouble!</item>
@@ -17,5 +18,25 @@
         <item>Help. I am hurt!</item>
         <item>Help. I am being robbed!</item>
     </string-array>
+    
+    <string-array name="emergency_contacts">
+        <item>Mom</item>
+        <item>Dad</item>
+        <item>Katie</item>
+        <item>Jared</item>
+        <item>Jeff</item>
+    </string-array>
+    
+    <string-array name="emergency_contacts_values">
+        <item>Mom</item>
+        <item>Dad</item>
+        <item>Katie</item>
+        <item>Jared</item>
+        <item>Jeff</item>
+    </string-array>
+    
+    
+    
+    <string-array name="empty_array"/>
 
 </resources>
