--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -37,4 +37,6 @@
     </string-array>
     <string-array name="empty_array" />
 
+    <string name="title_activity_gesture_confirmation">Gesture Confirmation</string>
+
 </resources>
